--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -9,4 +9,4 @@ homeassistant:
 logger:
   default: info
   logs:
-    custom_components.integration_blueprint: debug
+    custom_components.aprs_weather_station: debug
