--- a/custom_components/aprs_weather_station/manifest.json
+++ b/custom_components/aprs_weather_station/manifest.json
@@ -8,5 +8,8 @@
   "documentation": "https://github.com/zinuzoid/aprs_weather_station_hacs",
   "iot_class": "cloud_push",
   "issue_tracker": "https://github.com/zinuzoid/aprs_weather_station_hacs/issues",
+  "requirements": [
+    "aprslib==0.7.2"
+  ],
   "version": "0.1.0"
 }
