Rename to aprs_weather_station

--- a/custom_components/aprs_weather_station/manifest.json
+++ b/custom_components/aprs_weather_station/manifest.json
@@ -1,12 +1,12 @@
 {
-  "domain": "integration_blueprint",
-  "name": "Integration blueprint",
+  "domain": "aprs_weather_station",
+  "name": "APRS Weather Station",
   "codeowners": [
-    "@ludeeus"
+    "@zinuzoid"
   ],
   "config_flow": true,
-  "documentation": "https://github.com/ludeeus/integration_blueprint",
-  "iot_class": "cloud_polling",
-  "issue_tracker": "https://github.com/ludeeus/integration_blueprint/issues",
+  "documentation": "https://github.com/zinuzoid/aprs_weather_station_hacs",
+  "iot_class": "cloud_push",
+  "issue_tracker": "https://github.com/zinuzoid/aprs_weather_station_hacs/issues",
   "version": "0.1.0"
 }
